--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,3 +5,10 @@ html{
 body{
     background-color: rgb(240, 242, 245);
 }
+
+.saimo-table-toolbar-float{
+    margin-top:10px;
+    height:70px;
+    padding-top:16px;
+    z-index: inherit;
+}
