--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -10,7 +10,8 @@ body{
     margin-top:10px;
     height:70px;
     padding-top:16px;
-    z-index: inherit !important;
+    background-color: #fff;
+    // z-index: inherit !important;
 }
 
 
